[package]
name = "dictionary"
description = "Plugin to look up word definitions using the Free Dictionary API"
repository = "https://github.com/anyrun-org/plugin-dictionary"
homepage = "https://github.com/anyrun-org/plugin-dictionary"
readme = "README.md"
license = "GPLv3"
version = "0.1.0"
edition = "2021"
author = ["Kirottu"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.1"
anyrun-plugin = "0.1.0"
reqwest = { version = "0.11.16", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ron = "0.8.0"
serde = { version = "1.0.160", features = ["derive"] }
